--- a/logstash/postgres-to-elasticsearch/pipeline/pg-table-es.conf
+++ b/logstash/postgres-to-elasticsearch/pipeline/pg-table-es.conf
@@ -12,7 +12,7 @@ input {
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    index => "employee"
+    index => "employees"
     document_id => "%{id}"
   }
 }
