--- a/logstash/postgres-to-elasticsearch/pipeline/pg-table-es.conf
+++ b/logstash/postgres-to-elasticsearch/pipeline/pg-table-es.conf
@@ -5,7 +5,7 @@ input {
     jdbc_password => "vbv"
     jdbc_driver_class => "org.postgresql.Driver"
     jdbc_driver_library => "/usr/share/logstash/jdbc-drivers/postgresql-42.7.5.jar"
-    statement => "SELECT * from employees"  # Corrected the query here
+    statement => "SELECT * from employees"
     schedule => "* * * * *"
   }
 }
